--- a/src/messages_en_US.properties
+++ b/src/messages_en_US.properties
@@ -7,7 +7,7 @@ erro404=This page does not exist!
 erro500=An error has occurred in the system!
 exibir=Exibir
 
-listagem=list
+listagem=List
 
 nome=Name
 novo=new
