--- a/src/messages_pt_BR.properties
+++ b/src/messages_pt_BR.properties
@@ -7,7 +7,7 @@ erro404=Essa página não existe.
 erro500=Ocorreu um erro!
 exibir=Exibir
 
-listagem=listagem
+listagem=Listagem
 
 nome=Nome
 novo=novo
