--- a/src/messages.properties
+++ b/src/messages.properties
@@ -14,10 +14,12 @@ nome=Nome
 novo=Novo
 
 palavras.chave=Palavras-chave
+perfil=Perfil
 
 remover=Remover
 
 salvar=Salvar
+selecione=selecione
 senha=Senha
 
 usuario=Usuário
