--- a/src/messages_en_US.properties
+++ b/src/messages_en_US.properties
@@ -14,10 +14,12 @@ nome=Name
 novo=New
 
 palavras.chave=Keywords
+perfil=Profile
 
 remover=Remove
 
 salvar=Save
+selecione=select
 senha=Password
 
 usuario=User
