--- a/src/messages_en_US.properties
+++ b/src/messages_en_US.properties
@@ -1,29 +1,4 @@
-artigosEm=Articles in
-autenticar=Authenticate
+bem.vindo=Welcome
 
-editar=Edit
-email=Mail
-erro=Error
-erro404=This page does not exist!
-erro500=An error has occurred in the system!
-exibir=Exibir
-
-listagem=List
-
-nome=Name
-novo=New
-
-palavras.chave=Keywords
-perfil=Profile
-
-remover=Remove
-
-salvar=Save
-selecione=select
-senha=Password
-
-usuario=User
-usuarioErroSalvar=Error saving user!
-usuarioSucessoSalvar=User was successfully saved!
-usuarioSucessoEditar=User was successfully edited!
-usuarioSucessoRemover=User was successfully removed!
+erro=Ops!
+erro.ajax=An error occurred and the action could not be completed.
