--- a/src/messages_pt_BR.properties
+++ b/src/messages_pt_BR.properties
@@ -1,29 +1,4 @@
-artigosEm=Artigos em
-autenticar=Autenticar
+bem.vindo=Bem-vindo
 
-editar=Editar
-email=E-mail
-erro=Erro
-erro404=Essa página não existe.
-erro500=Ocorreu um erro!
-exibir=Exibir
-
-listagem=Listagem
-
-nome=Nome
-novo=Novo
-
-palavras.chave=Palavras-chave
-perfil=Perfil
-
-remover=Remover
-
-salvar=Salvar
-selecione=selecione
-senha=Senha
-
-usuario=Usuário
-usuarioErroSalvar=Erro ao salvar o usuário
-usuarioSucessoSalvar=Usuário salvo com sucesso!
-usuarioSucessoEditar=Usuário editado com sucesso!
-usuarioSucessoRemover=Usuário removido com sucesso!
+erro=Ops!
+erro.ajax=Ocorreu um erro e a ação não pôde ser concluída.
