--- a/src/messages_en_US.properties
+++ b/src/messages_en_US.properties
@@ -1,4 +1,6 @@
 bem.vindo=Welcome
 
 erro=Ops!
+erro.404=This place does not exist.
+erro.500=An error occurred and that wasn't nice of the part from the server.
 erro.ajax=An error occurred and the action could not be completed.
