--- a/src/messages_pt_BR.properties
+++ b/src/messages_pt_BR.properties
@@ -1,4 +1,6 @@
 bem.vindo=Bem-vindo
 
 erro=Ops!
+erro.404=Esse lugar não existe!
+erro.500=Ocorreu um erro e isso não foi nada bonito da parte do servidor.
 erro.ajax=Ocorreu um erro e a ação não pôde ser concluída.
