--- a/src/messages.properties
+++ b/src/messages.properties
@@ -7,3 +7,5 @@ erro=Ops!
 erro.404=Esse lugar não existe!
 erro.500=Ocorreu um erro e isso não foi nada bonito da parte do servidor.
 erro.ajax=Ocorreu um erro e a ação não pôde ser concluída.
+
+validator.email=E-mail inválido!
