--- a/src/messages_en_US.properties
+++ b/src/messages_en_US.properties
@@ -7,3 +7,5 @@ erro=Ops!
 erro.404=This place does not exist.
 erro.500=An error occurred and that wasn't nice of the part from the server.
 erro.ajax=An error occurred and the action could not be completed.
+
+validator.email=Invalid mail!
