Adicionado keys de erro.

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -9,3 +9,5 @@ erro.500=Ocorreu um erro e isso não foi nada bonito da parte do servidor.
 erro.ajax=Ocorreu um erro e a ação não pôde ser concluída.
 
 validator.email=E-mail inválido!
+validator.notEmpty=Não pode ser vazio!
+validator.notNull=Não pode ser nulo!
