--- a/src/messages_en_US.properties
+++ b/src/messages_en_US.properties
@@ -9,3 +9,5 @@ erro.500=An error occurred and that wasn't nice of the part from the server.
 erro.ajax=An error occurred and the action could not be completed.
 
 validator.email=Invalid mail!
+validator.notEmpty=Cannot be empty!
+validator.notNull=Cannot be null!
