--- a/src/messages_en_US.properties
+++ b/src/messages_en_US.properties
@@ -3,10 +3,13 @@ arquivo.invalido=Invalide file! Allowed: JPG, JPEG, GIF, BMP or PNG.
 
 bem.vindo=Welcome
 
+email.ja.cadastrado=Email already registered.
 erro=Ops!
 erro.404=This place does not exist.
 erro.500=An error occurred and that wasn't nice of the part from the server.
 erro.ajax=An error occurred and the action could not be completed.
+
+usuario.salvo.sucesso=User was successfully saved.
 
 validator.email=Invalid mail!
 validator.notEmpty=Cannot be empty!
