--- a/src/messages_pt_BR.properties
+++ b/src/messages_pt_BR.properties
@@ -3,10 +3,13 @@ arquivo.invalido=Arquivo inválido! Permitidos: JPG, JPEG, GIF, BMP ou PNG.
 
 bem.vindo=Bem-vindo
 
+email.ja.cadastrado=E-mail já cadastrado.
 erro=Ops!
 erro.404=Esse lugar não existe!
 erro.500=Ocorreu um erro e isso não foi nada bonito da parte do servidor.
 erro.ajax=Ocorreu um erro e a ação não pôde ser concluída.
+
+usuario.salvo.sucesso=Usuário salvo com sucesso.
 
 validator.email=E-mail inválido!
 validator.notEmpty=Não pode ser vazio!
