--- a/src/messages_en_US.properties
+++ b/src/messages_en_US.properties
@@ -9,6 +9,7 @@ erro.404=This place does not exist.
 erro.500=An error occurred and that wasn't nice of the part from the server.
 erro.ajax=An error occurred and the action could not be completed.
 
+usuario.atualizado.sucesso=User was successfully updated.
 usuario.salvo.sucesso=User was successfully saved.
 
 validator.email=Invalid mail!
