--- a/src/messages_en_US.properties
+++ b/src/messages_en_US.properties
@@ -10,6 +10,7 @@ erro.500=An error occurred and that wasn't nice of the part from the server.
 erro.ajax=An error occurred and the action could not be completed.
 
 usuario.atualizado.sucesso=User was successfully updated.
+usuario.removido.sucesso=User was successfully deleted.
 usuario.salvo.sucesso=User was successfully saved.
 
 validator.email=Invalid mail!
