--- a/src/messages_pt_BR.properties
+++ b/src/messages_pt_BR.properties
@@ -10,6 +10,7 @@ erro.500=Ocorreu um erro e isso não foi nada bonito da parte do servidor.
 erro.ajax=Ocorreu um erro e a ação não pôde ser concluída.
 
 usuario.atualizado.sucesso=Usuário atualizado com sucesso.
+usuario.removido.sucesso=Usuário removido com sucesso.
 usuario.salvo.sucesso=Usuário salvo com sucesso.
 
 validator.email=E-mail inválido!
