I18N da mensagem de erro ao se logar.

--- a/src/messages_en_US.properties
+++ b/src/messages_en_US.properties
@@ -3,7 +3,8 @@ arquivo.invalido=Invalide file! Allowed: JPG, JPEG, GIF, BMP or PNG.
 
 bem.vindo=Welcome
 
-email.ja.cadastrado=Email already registered.
+email.ja.cadastrado=Mail already registered.
+email.senha.incorreta=Mail or password incorrect!
 erro=Ops!
 erro.404=This place does not exist.
 erro.500=An error occurred and that wasn't nice of the part from the server.
