--- a/src/messages_pt_BR.properties
+++ b/src/messages_pt_BR.properties
@@ -4,6 +4,7 @@ arquivo.invalido=Arquivo inválido! Permitidos: JPG, JPEG, GIF, BMP ou PNG.
 bem.vindo=Bem-vindo
 
 email.ja.cadastrado=E-mail já cadastrado.
+email.senha.incorreta=E-mail ou senha incorreta!
 erro=Ops!
 erro.404=Esse lugar não existe!
 erro.500=Ocorreu um erro e isso não foi nada bonito da parte do servidor.
