--- a/src/messages_en_US.properties
+++ b/src/messages_en_US.properties
@@ -3,6 +3,8 @@ arquivo.invalido=Invalide file! Allowed: JPG, JPEG, GIF, BMP or PNG.
 
 bem.vindo=Welcome
 
+caminho.destino.invalido=Caminho de destino inválido!
+
 email.ja.cadastrado=Mail already registered.
 email.senha.incorreta=Mail or password incorrect!
 erro=Ops!
