--- a/src/messages.properties
+++ b/src/messages.properties
@@ -3,6 +3,8 @@ arquivo.invalido=Arquivo inválido! Permitidos: JPG, JPEG, GIF, BMP ou PNG.
 
 bem.vindo=Bem-vindo
 
+caminho.destino.invalido=Caminho de destino inválido!
+
 email.ja.cadastrado=E-mail já cadastrado.
 email.senha.incorreta=E-mail ou senha incorreta!
 erro=Ops!
