Traduzito mensagem i18n para português.

--- a/src/messages_pt_BR.properties
+++ b/src/messages_pt_BR.properties
@@ -3,7 +3,7 @@ arquivo.invalido=Arquivo inválido! Permitidos: JPG, JPEG, GIF, BMP ou PNG.
 
 bem.vindo=Bem-vindo
 
-caminho.destino.invalido=Invalid destination path!
+caminho.destino.invalido=Caminho de destino inválido!
 
 email.ja.cadastrado=E-mail já cadastrado.
 email.senha.incorreta=E-mail ou senha incorreta!
